remove hotkey on ui