@@ -1,2 +1,2 @@
-native-image --enable-preview -jar cfggen.jar -H:ConfigurationFileDirectories=./native-image -H:+AddAllCharsets
+native-image -jar cfggen.jar -H:ConfigurationFileDirectories=./native-image -H:+AddAllCharsets
 pause
